初期設定を簡略化

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
 version: "3.8"
 services:
   rstudio:
-    image: ${IMAGE_NAME:-rproject:latest}
     build:
-      context: docker
+      context: dev/docker
     ports:
       - "8787:8787"
     environment:
@@ -11,7 +10,7 @@ services:
       - DISABLE_AUTH=true
       - RENV_PATHS_CACHE=/home/rstudio/.local/share/renv/cache
     volumes:
-      - .:${PROJECT_MOUNT_PATH:-/home/rstudio/rproject}
-      - ${DOTFILES_ROOT}:/home/rstudio/dotfiles
-      - ${RENV_PATHS_CACHE}:/home/rstudio/.local/share/renv/cache
-      - ${GITHUB_SSH_IDENTITY}:/home/rstudio/.ssh/id_github:ro
+      - .:${PROJECT_PATH_CONTAINER:-/home/rstudio/project}
+      - ${DOTFILES_ROOT:-./dev/dotfiles}:/home/rstudio/dotfiles
+      - ${RENV_PATHS_CACHE_HOST:-./dev/renv/cache}:/home/rstudio/.local/share/renv/cache
+      - ${GITHUB_SSH_IDENTITY:-/dev/null}:/home/rstudio/.ssh/id_github:ro
