--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
-PROJECT_MOUNT_PATH="/home/rstudio/your-rproject"
-IMAGE_NAME="your-repo/your-rproject-rstudio:4.0.3"
-DOTFILES_ROOT="~/ghq/github.com/username/rproject-dotfiles"
-RENV_PATHS_CACHE="~/Library/Application Support/renv/cache"
-GITHUB_SSH_IDENTITY="~/.ssh/id_ed25519"
+DOTFILES_ROOT="./dev/dotfiles"
+RENV_PATHS_CACHE_HOST="./dev/renv/cache"
+GITHUB_SSH_IDENTITY="/dev/null"
+PROJECT_PATH_CONTAINER="/home/rstudio/project"
