--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -1,49 +1,110 @@
-# PROJECT_PATH_HOST
-#
-# the project root path in the Docker host.
-#
-PROJECT_PATH_HOST=..
+# ------------------------------
+# Workspace folder paths
+# ------------------------------
 
-# PROJECT_PATH_CONTAINER
+# LOCAL_WORKSPACE_FOLDER
 #
-# the project root path in the Docker contaienr.
+# Path of the workspace folder in the Docker host.
 #
-PROJECT_PATH_CONTAINER="/home/rstudio/project"
+# Examples:
+# default)
+#     LOCAL_WORKSPACE_FOLDER=..
+# 1)
+#     LOCAL_WORKSPACE_FOLDER=../..
+# 2)
+#     LOCAL_WORKSPACE_FOLDER=../subdir
 
-# DOTFILES_DIR_HOST
+# CONTAINER_WORKSPACE_FOLDER
 #
-# the dotfiles path in the Docker host.
+# The target workspace folder in the container.
 #
-# Example: dotfiles within the project
-DOTFILES_DIR_HOST=./dotfiles
-#
-# Example: disable mounted dotfiles.
-# DOTFILES_DIR_HOST=/dev/null
-#
-# Example: mount your own dotfiles.
-# DOTFILES_DIR_HOST=/path/to/dotfiles
+# Examples:
+# default)
+#     CONTAINER_WORKSPACE_FOLDER=/home/rstudio/project
+# 1)
+#     CONTAINER_WORKSPACE_FOLDER=/home/rstudio/your-project-name
 
-# DOTFILES_DIR_CONTAINER
-#
-# the dotfiles path in the contaienr.
-DOTFILES_DIR_CONTAINER="/home/rstudio/.dotfiles"
+# ------------------------------
+# renv global packge cache
+# ------------------------------
 
 # RENV_PATHS_CACHE_HOST
 #
-# renv cache path in the Docker host
+# The renv global package cache directory path in the Docker host
 # Cf. https://rstudio.github.io/renv/articles/docker.html#running-docker-containers-with-renv
 #
-# Example: renv cache within the project
-RENV_PATHS_CACHE_HOST=./data/renv/cache
+# Examples:
+# default)
+#     RENV_PATHS_CACHE_HOST=./data/renv/cache
+# 1) the standard path for macOS
+#     RENV_PATHS_CACHE_HOST="~/Library/Application Support/renv/cache"
+# 2) the standard path for Linux
+#     RENV_PATHS_CACHE_HOST="~/.local/share/renv/cache"
+
+# RENV_PATHS_CACHE_CONTAINER
 #
-# Example: macOS default renv cache path
-# RENV_PATHS_CACHE_HOST="~/Library/Application Support/renv/cache"
+# The renv global package cache directory path in the contaienr
+#
+# Examples:
+# default)
+#     RENV_PATHS_CACHE_CONTAINER=/home/rstudio/.local/share/renv/cache
+
+# ------------------------------
+# dotfiles
+# ------------------------------
+
+# DOTFILES_DIR_HOST
+#
+# The source dotfiles path to mount into the container
+#
+# Examples:
+# default)
+#     DOTFILES_DIR_HOST=./dotfiles
+# 1) disable mounted dotfiles (to avoid conflict with VS Code dotfiles setting)
+#     DOTFILES_DIR_HOST=/dev/null
+# 2) mount your own dotfiles
+#     DOTFILES_DIR_HOST=/path/to/your/dotfiles
+
+# DOTFILES_DIR_CONTAINER
+#
+# The target path to mount dotfiles
+#
+# Examples:
+# default)
+#     DOTFILES_DIR_CONTAINER=/mnt/dotfiles
+# 1)
+#     DOTFILES_DIR_CONTAINER=/home/rstudio/dotfiles
+
+# DOTFILES_INSTALL_COMMAND
+#
+# Examples:
+# default)
+#     DOTFILES_INSTALL_COMMAND="bash /mnt/dotfiles/install.sh"
+# 1) disable installing
+#     DOTFILES_INSTALL_COMMAND=":"
+# 2)
+#     DOTFILES_INSTALL_COMMAND="/home/rstudio/dotfiles/install.sh"
+
+# ------------------------------
+# SSH Agent
+# ------------------------------
 
 # SSH_AUTH_SOCK_HOST
 #
-# SSH Agent socket in the Docker host.
+# The ssh-agent socket path in the Docker host.
+# You don't have to configure this variable if you use VS Code Remote - Container.
 #
-SSH_AUTH_SOCK_HOST=
+# Examples:
+# default) disabled.
+#     SSH_AUTH_SOCK_HOST=/dev/null
+# 1) Docker Desktop for macOS
+#     SSH_AUTH_SOCK_HOST=/run/host-services/ssh-auth.sock
+
+# SSH_AUTH_SOCK_CONTAINER
 #
-# Example: Docker Desktop for Mac (https://docs.docker.com/desktop/mac/networking/#ssh-agent-forwarding)
-# SSH_AUTH_SOCK_HOST=/run/host-services/ssh-auth.sock
+# The ssh-agent socket path in the container.
+# You don't have to configure this variable if you use VS Code Remote - Container.
+#
+# Examples:
+# default)
+#     SSH_AUTH_SOCK_CONTAINER=/run/host-services/ssh-auth.sock
