upgrade to renv 0.16.0

--- a/.devcontainer/docker/Dockerfile
+++ b/.devcontainer/docker/Dockerfile
@@ -1,4 +1,4 @@
-ARG R_VERSION="4.2.0"
+ARG R_VERSION="4.2.1"
 FROM rocker/rstudio:${R_VERSION}
 
 # Install required APT packages
@@ -15,19 +15,14 @@ RUN \
     libgit2-dev
 
 # Install renv
-ARG RENV_VERSION="0.15.5"
+ARG RENV_VERSION="0.16.0"
 COPY install-renv.R /install-renv.R
 RUN Rscript /install-renv.R $RENV_VERSION \
   && su -c 'mkdir -p /home/rstudio/{.local/share/renv/cache,.renv/library}' rstudio
 
 # Configuration files
-COPY Rprofile.site /usr/local/lib/R/etc/Rprofile.site
+RUN echo 'options("renv.config.autoloader.enabled" = FALSE); \
+  if (file.exists(renv::paths$library()) || file.exists(renv::paths$lockfile())) \
+  { renv::load(); renv::restore(prompt = FALSE) }' \
+  >> ${R_HOME}/etc/Rprofile.site
 COPY --chown=rstudio:rstudio .Renviron /home/rstudio/.Renviron
-
-# Install additional APT packages
-RUN \
-  --mount=type=cache,target=/var/lib/apt/lists \
-  --mount=type=cache,target=/var/cache/apt/archives \
-  apt-get update \
-  && apt-get install -y --no-install-recommends \
-    fonts-ipaexfont
