--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,9 @@
 #
 # Examples:
 # 1) Linux (WSL2) standard path
-# RENV_PATHS_CACHE_HOST="~/.local/share/renv/cache"
+# RENV_PATHS_CACHE_HOST="~/.cache/R/renv/cache"
 # 2) macOS standard path
-# RENV_PATHS_CACHE_HOST="~/Library/Application Support/renv/cache"
+# RENV_PATHS_CACHE_HOST="~/Library/Caches/org.R-project.R/R/renv/cache"
 #
 # Caution:
 # If this variable is not specified, `.devcontainer/features/renv/cache` will be used.
