--- a/.devcontainer/docker/Dockerfile
+++ b/.devcontainer/docker/Dockerfile
@@ -1,5 +1,4 @@
-ARG R_VERSION="4.2.1"
-FROM rocker/rstudio:${R_VERSION}
+FROM rocker/rstudio:4.3.1
 
 # Install required APT packages
 RUN rm -f /etc/apt/apt.conf.d/docker-clean \
@@ -14,9 +13,10 @@ RUN \
     libxml2-dev \
     libgit2-dev
 
-# Install renv 0.16.0 from RSPM snapshot
-RUN R -e 'install.packages("renv",repos="https://packagemanager.rstudio.com/cran/__linux__/focal/2022-10-14/")' \
+# Download renv 1.0.0 tarball
+ARG RENV_BOOTSTRAP_TARBALL=/opt/renv_1.0.0.tar.gz
+RUN wget -O $RENV_BOOTSTRAP_TARBALL \
+  'https://packagemanager.posit.co/cran/__linux__/jammy/latest/src/contrib/renv_1.0.0.tar.gz?r_version=4.3&arch=x86_64' \
+  && chown rstudio:rstudio $RENV_BOOTSTRAP_TARBALL \
   && rm -rf /home/rstudio/.config/rstudio \
-  && su -c 'mkdir -p /home/rstudio/{.local/share/renv/cache,.renv/library,.config}' rstudio
-COPY Rprofile.site $R_HOME/etc/Rprofile.site
-COPY --chown=rstudio:rstudio .Renviron /home/rstudio/.Renviron
+  && su -c 'mkdir -p /home/rstudio/{.cache/R/renv/library,.config,.local/share}' rstudio
